dark mode fix

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,8 @@ body{
 }
 
 div#body{
-    margin: 10px 10px;
+    margin: 0px;
+    padding: 20px;
 }
 
 div#title{
@@ -287,7 +288,6 @@ div#footer{
 
 
 p.nav{
-    padding-top: 20px;
     font-size: 20px;
 }
 
